fix: add link to repo in notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Ссылка на репозиторий](https://github.com/valery-v-ya/first-progect)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "toc": true
